# data-science-portfolio

./: .gitignore  Cargo.toml  README.md  csv_des_types.rs  features.csv
csv_rust/: Cargo.toml
csv_rust/src/: csv_types.rs  main.rs
csvenum_test/: categorical_variants.rs
file_utility/: Cargo.toml
file_utility/src/: arg_parsing.rs  file_handling.rs  lib.rs
generate_types_from_csv/: Cargo.toml  clippy_auto_fix.sh
generate_types_from_csv/src/: categorical_variants.rs  main.rs
house_pricing/: Cargo.toml
house_pricing/src/: lib.rs  main.rs
house_pricing/src/custom_pipeline/: mod.rs
py/: main.py  only_str.csv  pyntb.ipynb  rsntb.ipynb
py/.ipynb_checkpoints/: only_str-checkpoint.csv  py_pd-checkpoint.ipynb  pyntb-checkpoint.ipynb  rsntb-checkpoint.ipynb
py/.virtual_documents/: py_pd.ipynb  pyntb.ipynb
